--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div id="wrap">
 				<div id="text">
 					<div id="code">
-						<font color="#FF0000">
+						<font color="#ff71ce">
 							<span class="say">
 								<h1>我希望有个如你一般的人。</h1>
 							</span><br><br>
