--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		</script>
 		<script>
 		function nextPage(){
-			window.location.href='page/cake.html';
+			window.location.href='page/wechat-message.html';
 			console.log('click')
 		}
 		</script>
