--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>生日快乐!!!</title>
-	</head>
-	<body>
-		生日快乐
-		
-	</body>
-	<script>
-		
-		setTimeout(()=>{
-			window.location.href='page/cake.html'
-		},2000)
-	</script>
-</html> -->
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -36,6 +18,12 @@
 				color: #666666
 			}
 		</style>
+		<script>
+			// 检查时间是否合适
+			if (sessionStorage.getItem('birthdayStatu') != 1) {
+				window.location.href = './page/countdown.html';
+			}
+		</script>
 	</head>
 	<body>
 		<audio autoplay="autopaly">
@@ -59,7 +47,8 @@
 							<span class="say">
 								<h1>生日快乐!</h1>
 							</span>
-							<span class="say hand" onclick="nextPage()"><span class="space"></span> continue >>> </span><br>
+							<span class="say hand" onclick="nextPage()"><span class="space"></span> continue >>>
+							</span><br>
 							<br>
 						</font>
 					</div>
@@ -237,10 +226,10 @@
 			})();
 		</script>
 		<script>
-		function nextPage(){
-			window.location.href='page/wechat-message.html';
-			console.log('click')
-		}
+			function nextPage() {
+				window.location.href = 'page/wechat-message.html';
+				console.log('click')
+			}
 		</script>
 	</body>
 </html>
